--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,26 +4,103 @@ body{
 }
 
 .card{
-  width: 30%;
+  width: 29%;
   margin-right:1%;
   border-radius: 5px;
   box-shadow: 2px -5px 30px -4px rgba(0,0,0,0.15);
 -webkit-box-shadow: 2px -5px 30px -4px rgba(0,0,0,0.15);
 -moz-box-shadow: 2px -5px 30px -4px rgba(0,0,0,0.15);
-padding: 10px;
+padding: 20px;
 float: left;
 margin-top: 20px;
 z-index: 99;
 }
 
+.card-left{
+  width: 65%;
+  float: left;
+}
+
+.card-left h1{
+  font-size: 1.5em;
+  margin: 0;
+  margin-top: 10px;
+}
+
+.card-left p{
+  margin: 0;
+}
+
+.card-right{
+  width: 35%;
+  float: left;
+  position: relative;
+  text-align: center;
+}
+
+.card-right h1{
+  font-size: 85px;
+  font-weight: 100;
+  margin: 0;
+  
+}
+
+.card-right h3{
+  margin: 0;
+  position: absolute;
+  top: 15px;
+  right: 0;
+  font-size: 30px;
+}
+
+.card-right p{
+  margin: -5px;
+}
+
 .button{
-  width: 100%;
-  height: 30px;
+  width: 85%;
+  height: 33px;
   color: white;
   background-color: #2b2b2b;
+  text-align: center;
+  padding-top: 15px;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  float: left;
+}
+
+.button:hover{
+  cursor: pointer;
+}
+
+.led{
+  width: 12%;
+  margin-left: 3%;
+  height: 35px;
+  color: white;
+  background-color:  #2b2b2b;
   text-align: center;
   padding-top: 13px;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
+  float: left;
+}
+
+.led img{
+  width: 60%;
+  margin-top: -5px;
+  
+}
+
+canvas{
+  margin-top: -40px;
+}
+
+.desc{
+  font-size: 13px;
+  font-style: italic;
+  margin-top: 15px !important;
+  width: 230px;
 }
